manifests/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nuxtjs
  namespace: architecture-review
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: architecture-review-nuxtjs
        resources:
          limits:
            cpu: 0.75
            memory: 1024Mi
          requests:
            cpu:  0.25
            memory: 512Mi
